--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8"> 
   <title>RingQ Dialer</title>
 
   <script src="https://ringq-dev-ed.develop.lightning.force.com/support/api/62.0/lightning/opencti_min.js" type="application/javascript"></script>
@@ -78,6 +77,8 @@
         'FloatingWindow',
         `width=${windowWidth},height=${windowHeight},top=${top},left=${left},resizable=yes,scrollbars=yes`
       );
+
+      console.log('opened form for new contact');
  
       // window.location.href = url;
     } 
