just fixed the s hehe

--- a/web/index.html
+++ b/web/index.html
@@ -179,11 +179,11 @@
           const currentSearch = searchOrder[index];
 
           let searchMethodName = '';
-          if (currentSearch === 'Contact') {
+          if (currentSearch === 'Contacts') {
             searchMethodName = 'findContactDetail';
-          } else if (currentSearch === 'Lead') {
+          } else if (currentSearch === 'Leads') {
             searchMethodName = 'findLeadsDetail';
-          } else if (currentSearch === 'Account') {
+          } else if (currentSearch === 'Accounts') {
             searchMethodName = 'findAccountDetail';
           }
 
