--- a/web/index.html
+++ b/web/index.html
@@ -103,20 +103,17 @@
     
         async function searchNext(index) {
           if (index >= searchOrder.length || found) { 
-            if (!found && !doNothing) {
-              await globalSearch(callerNumber);
-              setTimeout(function() {
-                sfPopupFormJS(defaultPopupFormAPIName, function(apiName) {
-                  switch (apiName) {
-                    case 'Contact':
-                      return { Phone: callerNumber, FirstName: '', LastName: '', Email: '' };
-                    case 'Lead':
-                      return { Phone: callerNumber };
-                    default:
-                      return { Phone: callerNumber };
-                  }
-                });
-              }, 5000)
+            if (!found && !doNothing) { 
+              sfPopupFormJS(defaultPopupFormAPIName, function(apiName) {
+                switch (apiName) {
+                  case 'Contact':
+                    return { Phone: callerNumber, FirstName: '', LastName: '', Email: '' };
+                  case 'Lead':
+                    return { Phone: callerNumber };
+                  default:
+                    return { Phone: callerNumber };
+                }
+              });
             } 
             if (callback) callback(objectType);
             return;
@@ -135,7 +132,8 @@
 
           sfRunApexJS(searchMethodName, `phoneNumber=${callerNumber}`, async (data) => {
             const result = JSON.parse(data);
-            if (result && Object.keys(result).length !== 0) {
+            
+            if (result && result.Id) { 
               if (!doNothing) {
                 !multRecord
                   ? sfNavigateJS(`${domain}/lightning/r/${result.attributes.type}/${result.Id}/view`)
@@ -143,13 +141,12 @@
               }
               objectType = result.attributes.type;
               found = true;
+            } else {
+              searchNext(index + 1);
+              return;
             }
 
-            if (!found) {
-              searchNext(index + 1);
-            } else {
-              if (callback) callback(objectType);
-            }
+            if (callback) callback(objectType);
           });
         }
 
